Small Changes to be fixed in Zukunft

--- a/Directed Page.html
+++ b/Directed Page.html
@@ -58,9 +58,9 @@
                         </div>
                     </td>
                     <td align="center" class="hidden shift" style="padding-left:10px;">
-                        <img class="image" src="Summary/bistany.jpg">
-                        <div onClick="parent.location='Summary/Bistany.html'" style="cursor:pointer">
-                            Sean Bistany<br>
+                        <img src="Summary/singer.jpg" class="image">
+                        <div onClick="parent.location='Summary/Singer.html'" style="cursor:pointer">
+                            Alli Singer<br>
                             Chief Operations Officer
                         </div>
                     </td>
@@ -77,13 +77,12 @@
                     </td>
                     <td align="Center" class="hidden shift" style="position:relative;left:10px;">
                         <br>
-                        <img src="Summary/singer.jpg" class="image">
-                        <div onClick="parent.location='Summary/Singer.html'" style="cursor:pointer">
-                            Alli Singer<br>
-                            Chief Financial Officer
+                        <img class="image" src="Summary/bistany.jpg">
+                        <div onClick="parent.location='Summary/Bistany.html'" style="cursor:pointer">
+                            Sean Bistany<br>
+                            Chief Operations Officer
                         </div>
                     </td>
-
                     <td align="Center" class="hidden shift" style="padding-left:20px;">
                         <br>
                         <img class="image" src="Summary/nellis.jfif">
