--- a/Product.html
+++ b/Product.html
@@ -35,14 +35,17 @@
     <body>
         <div style="margin:8%;">
             <h1>&emsp;</h1>
-            <h1 class="hidden shift">&emsp;Our Products</h1>
+            <h1 class="hidden shift">&emsp;Our Product : The ARC System</h1>
             <div class="hidden shift">
-            <br><h2>&emsp;&emsp;Placeholder 1</h2>
-            <img src=".jpg" style="border:4px solid black;margin-left:10%">
+                <h3>&emsp;&emsp;&emsp;The Autonomous Radiation Characterization System</h3>
             </div>
             <div class="hidden shift">
-            <br><h2>&emsp;&emsp;Placeholder 2</h2>
-            <img src=".jpg" style="border:4px solid black;margin-left:10%">
+            <br><h2>&emsp;&emsp;ARC System Software</h2>
+            <img src="Spectrum Plot.png" style="border:4px solid black;margin-left:10%">
+            </div>
+            <div class="hidden shift">
+            <br><h2>&emsp;&emsp;ARC System Platform</h2>
+            <img src="Robit.png" style="border:4px solid black;margin-left:10%">
             </div>
             <br>
             <div class="hidden shift">
