--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Radical Energy and Materials</title>
+        <title>Radical Energy & Materials</title>
         <link rel="icon" href="LogoRounded.png"/>
         <link rel="stylesheet" href="style.css">
         <script defer src="app.js"></script>
@@ -9,7 +9,7 @@
     <header style="z-index:2;background-color: #131316;width:101%">
         <div id="top" class="header" style="background:#131316" border="0">
             <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" width="130px" align="left">
-            <span class="title"><p><i><b>Radical Energy and Materials&emsp;</b></i></p></span>
+            <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
         <div class="infoContainer" style="position:relative;background:#81cdff;" align="right">
@@ -34,7 +34,7 @@
     </header>
     <body>
         <section>
-            <h1 class="hidden shift" style="position:relative;z-index:1;">Radical Energy and Materials</h1>
+            <h1 class="hidden shift" style="position:relative;z-index:1;">Radical Energy & Materials</h1>
             <p class="hidden shift" style="position:relative;z-index:1;">A Stable Company in a Radioactive World</p>
         </section>
         <div>
