--- a/Contact.html
+++ b/Contact.html
@@ -38,9 +38,9 @@
             <h1 class="hidden shift">&emsp;General Information</h1>
             <div class="hidden shift">
             <p>
-                Address
+                505 W. Prospect Ave.
                 <br>
-                Address second Line
+                State College, PA 16801
                 <br>
                 <a href="https://radicalenergyandmaterials.tech">radicalenergyandmaterials.tech</a>
             </p>
@@ -61,7 +61,7 @@
                 <br>
                 Phone: (570) 606-5263
                 <br>
-                Email: <a href="mailto: colesmith5673@gmail.com">colesmith5673@gmail.com</a>
+                Email: <a href="mailto: cole@radicalenergyandmaterials.tech">cole@radicalenergyandmaterials.tech</a>
             </p>
             </div>
             <br><br><br>
