Product Pages Hyperlinked

--- a/Directed Page.html
+++ b/Directed Page.html
@@ -85,7 +85,7 @@
                     </td>
                     <td align="Center" class="hidden shift" style="padding-left:20px;">
                         <br>
-                        <img class="image" src="Summary/nellis.jfif">
+                        <img class="image" src="Summary/nellis.jpg">
                         <div onClick="parent.location='Summary/Nellis.html'" style="cursor:pointer">
                             Alex Nellis<br>
                             Chief Technical Officer
