--- a/Product.html
+++ b/Product.html
@@ -40,12 +40,12 @@
                 <h3>&emsp;&emsp;&emsp;The Autonomous Radiation Characterization System</h3>
             </div>
             <div class="hidden shift">
-            <br><h2>&emsp;&emsp;ARC System Software</h2>
-            <img src="Spectrum Plot.png" style="border:4px solid black;margin-left:10%">
+            <br><h2 onClick="parent.location='Software.html'" style="cursor:pointer">&emsp;&emsp;ARC System Software</h2>
+            <img onClick="parent.location='Software.html'" src="Spectrum Plot.png" style="cursor:pointer;border:4px solid black;margin-left:10%">
             </div>
             <div class="hidden shift">
-            <br><h2>&emsp;&emsp;ARC System Platform</h2>
-            <img src="Robit.png" style="border:4px solid black;margin-left:10%">
+            <br><h2 onClick="parent.location='Platform.html'" style="cursor:pointer;">&emsp;&emsp;ARC System Platform</h2>
+            <img src="Robit.png" onClick="parent.location='Platform.html'" height="511px" width="662px" style="cursor:pointer;border:4px solid black;margin-left:10%">
             </div>
             <br>
             <div class="hidden shift">
