--- a/Summary/Nellis.html
+++ b/Summary/Nellis.html
@@ -37,7 +37,7 @@
             <h1 style="position:relative;text-align:center">
                 Alex Nellis
             </h1>
-            <img src="nellis.jfif" class="imageProf">
+            <img src="nellis.jpg" class="imageProf">
             <h2 align="left" style="margin:5%;margin-top:1%;">
                 &emsp;&emsp;Alex Nellis is a senior in Nuclear and Mechanical Engineering at Penn State 
                 and provides all programming services for REM. Additionally, he is a reactor
