--- a/Directed Page.html
+++ b/Directed Page.html
@@ -80,7 +80,7 @@
                         <img class="image" src="Summary/bistany.jpg">
                         <div onClick="parent.location='Summary/Bistany.html'" style="cursor:pointer">
                             Sean Bistany<br>
-                            Chief Operations Officer
+                            Engineering Support
                         </div>
                     </td>
                     <td align="Center" class="hidden shift" style="padding-left:20px;">
