--- a/Backdoor.html
+++ b/Backdoor.html
@@ -33,16 +33,13 @@
         </div>
     </header>
     <body>
-        <section>
-            <h1 class="hidden shift" style="position:relative;z-index:1;">Radical Energy & Materials</h1>
-            <p class="hidden shift" style="position:relative;z-index:1;">A Stable Company in a Radioactive World</p>
-        </section>
-        <div>
-            <!--<img src="MainImage.jpg" style="position:relative;width:100%;top:-550px;z-index:0;">-->
+        <div style="position:relative;left:10%;margin:10%;">
+            <a class="key">6729009</a>
         </div>
     </body>
     <footer>
         <div>
+
         </div>
     </footer>
 </html>
